@@ -1,3 +1,9 @@
+Wed Jul 02 11:53:07 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/unittests/facet_hierarchy_1.py: Add regression test for
+	  issue #21: "SearchConnection._get_prefix_from_term fails when
+	  terms contain numbers".
+
 Wed Jul 02 11:00:09 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* setup.py,test.py,xappy/test.py: Move test.py to top level, for
